tests/cases/modules/ok/file_relative_child/words.ari
pub fn score() -> i64 {
  return 19;
}
