tests/cases/modules/errors/imported_parse_error.ari
pub fn broken() -> i64 {
  return 1
}
